[package]
name = "datafusion-hdfs-examples"
version = "0.1.0"
edition = "2021"

authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/datafusion-contrib/datafusion-objectstore-hdfs"

[features]
default = ["hdfs"]
hdfs = ["ballista/hdfs", "datafusion-objectstore-hdfs-testing/hdfs"]
hdfs3 = ["ballista/hdfs3", "datafusion-objectstore-hdfs-testing/hdfs3"]

[dependencies]
ballista = { version = "0.12.0", features = ["standalone"] }
datafusion = "44.0.0"
datafusion-objectstore-hdfs-testing = { path = "../hdfs-testing", default-features = false }
futures = "0.3"
num_cpus = "1.13.0"
prost = "0.11"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
tonic = "0.10"